[tool.poetry]
name = "live-check"
version = "0.1.0"
description = ""
authors = ["duyuxuan <duyuxuan@yixia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
requests = "^2.32.4"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
